--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="8dp"
         android:scaleType="fitStart"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/details_poster_container_cd" />
 
     <TextView
         android:id="@+id/movieName"
@@ -34,7 +35,7 @@
         android:id="@+id/releaseDate"
         android:layout_width="175dp"
         android:layout_height="15dp"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:layout_marginTop="4dp"
         android:layout_weight="1"
         android:textSize="12sp"
@@ -47,7 +48,7 @@
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="160dp"
         android:layout_height="0dp"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:layout_marginTop="12dp"
         android:isIndicator="true"
         android:numStars="10"
@@ -75,7 +76,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Movie Name :"
+        android:text="@string/movie_name_label"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/detailsPosterContainer"
         app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Release Date :"
+        android:text="@string/release_date_label"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/movieName"
         app:layout_constraintTop_toBottomOf="@+id/movieName" />
