--- a/app/src/main/res/layout/catalog_movie_list_item.xml
+++ b/app/src/main/res/layout/catalog_movie_list_item.xml
@@ -3,12 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/border"
-    android:padding="1dp">
+    android:padding="1dp"
+    android:backgroundTint="@color/colorPrimary">
 
     <ImageView
-        android:id="@+id/poserContainer"
+        android:id="@+id/posterContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/poster_container_cd" />
 
 </LinearLayout>
