--- a/app/src/main/res/layout/catalog_movie_list_item.xml
+++ b/app/src/main/res/layout/catalog_movie_list_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/border"
-    android:padding="1dp"
-    android:backgroundTint="@color/colorPrimary">
+    android:padding="1dp">
 
     <ImageView
         android:id="@+id/posterContainer"
